--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "family-tree-app",
   "private": true,
@@ -10,18 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
     "i18next": "^23.15.1",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "react-i18next": "^15.1.1",
-    "react-router-dom": "^7.1.1"
+    "i18next-browser-languagedetector": "^8.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@types/node": "^20.11.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
