--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
+
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "out",
+  "outputDirectory": "dist",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": null,
